    beta1:
    - GUI reimplemented on top of wxWidgets library
    - internal GUI settings moved from guiopts-internals.lua to gui.ini file
    - Windows NT 4.0 and Windows 2000 support dropped due to a poor system API
    - Internals: Windows Driver Kit support dropped because of its
      unreliable development environment - use Windows SDK v6.1 instead


  Version 6.0.0 2013-01-
  ------------------------------------------------------------------------------
    RC2:
    - upgrade check now better supports development releases

    RC1:
    - Internals: changed definition of WGX_OPTION structure
    - WgxGetControlDimensions routine added to wgx library

    - the following translations were added:

      Bengali

    - the following translations were updated:

      Catalan, Italian

    beta2:
    - added progress indication to the taskbar button for Windows 7
      and more recent Windows editions; it can be turned on/off by 
      show_progress_in_taskbar GUI option
    - file fragmentation reports moved from the root directories of
      the drives to the /reports sub-folder of the program's directory
    - added ability to configure the Explorer's context menu handler;
      an appropriate section added to guiopts.lua file
    - bug fix: UD_IN_FILTER forced to be not ignored when individual
      files/directories are specified on the command line
    - bug fix: UD_SORTING and UD_SORTING_ORDER environment variables
      forced to be set properly on GUI startup according to the Preview
      menu selections
    - added prefixes for all the debugging messages for easier analysis of logs
    - Internals: many prototypes changed in zenwinx, udefrag, wgx libraries;
      obsolete routines removed
    - winx_bootex_check routine added to zenwinx library
    - udefrag_init_library, udefrag_unload_library, udefrag_bootex_check,
      udefrag_bootex_register, udefrag_bootex_unregister routines added