@@ -207,7 +207,7 @@ static void set_dbg_log(char *name)
 {
     wchar_t *instdir;
     wchar_t *path = NULL;
-    int size, result;
+    int result;
 
     instdir = winx_getenv(L"UD_INSTALL_DIR");
     if(instdir == NULL){
@@ -215,9 +215,7 @@ static void set_dbg_log(char *name)
         return;
     }
     
-    winx_swprintf(path,size,result,
-        L"%ws\\logs\\boot-%hs.log",
-        instdir,name);
+    path = winx_swprintf(L"%ws\\logs\\boot-%hs.log",instdir,name);
     winx_free(instdir);
     if(path == NULL){
         winx_printf("\nset_dbg_log: cannot build log path\n\n");
